proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 9090 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: echo_service
                  max_grpc_timeout: 0s
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
                enabled: true
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  clusters:
  - name: echo_service
    connect_timeout: 30.0s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    # macos/windows 
    # envoy is running within docker
    # grpc service aka node-server or python-server is running in host
    # direct request from web to envoy to server by host.docker.internal
    # hosts: [{ socket_address: { address: host.docker.internal, port_value: 50051 }}]
    # ubuntu/linux
    # use --network=host which is depreciated
    # docker run --rm -it -p 9090:9090 -p 9901:9901 --network=host yg-envoy-echo
    hosts: [{ socket_address: { address: 0.0.0.0, port_value: 50051 }}]
